# dotfiles

./: .gitignore  AGENTS.md  Makefile  README.md  Xmodmap  Xresources  compton.conf  gtkrc-2.0  install.sh  packages.txt  xinitrc
ai-usage-panel/: Cargo.toml
bambu-printer-panel/: Cargo.toml
bambu-printer-panel/src/: main.rs
config/: kdeglobals
docs/: 2026-05-22-hyprland-asahi-migration.md  agent-context-handoff.md  audit-2026-05-28.md  audit-2026-05-29.md  audit-handoff-2026-05-30.md  claude-code-handoff-2026-05-29.md  claude-code-rust-rewrite-handoff-2026-05-29.md  claude-code-rust-rewrite-handoff-phase3-2026-05-29.md  ghostty-glass-backdrop-handoff-2026-06-05.md  handoff-2026-05-30-claude.md  handoff-2026-05-30-codex.md  handoff-2026-05-31-claude-ai-usage-emoji.md  handoff-2026-05-31-claude-ai-usage-panels.md  handoff-2026-05-31-claude-clean-4x6-cheatsheets.md  handoff-2026-05-31-claude-cleanup-trackpad.md  handoff-2026-06-01-claude-omniwm-hiro.md  handoff-2026-06-01-codex-ai-usage-glass.md  hypr-emoji-picker-backend-2026-05-30.md  hyprland-brightness-race-2026-05-30.md  hyprland-bugfix-2026-05-30.md  hyprland-quickstart.md  hyprland-waybar-ai-handoff.md  macos-parity-2026-05-28.md  macos-parity-handoff-2026-05-29.md  omniwm-hiro-windowing-migration.md  waybar-openai-token-indicator.md  wayland-emoji-picker-globe-key-2026-05-30.md
git/: .gitconfig
hypr-emoji-picker/: Cargo.toml
hypr-emoji-picker/src/: main.rs
i3/: config  dualdisplay.sh
i3blocks/: config
polybar/: config  launch.sh
redshift/: redshift.conf
scripts/: ai-usage-popup.py  ai_accounts.py  ai_reset.py  audio-menu-panel.py  audio-menu.sh  auto-brightness-toggle.sh  auto-sync.sh  battery-low-notify.sh  build-on-mini  disk-space-notify.sh  emoji-picker.py  ghostty-glass-backdrop.py  ghostty-glass.py  glass_popup.py  glass_shader.py  hypr-auto-brightness.py  hypr-brightness-fade.sh  hypr-lock-and-refresh.sh  hypr-trackpad-gestures.py  liquid-launcher.py  (+36 more)
waybar-helper/: Cargo.toml  README.md
waybar-helper/src/: accounts.rs  bambu.rs  claude.rs  codex.rs  main.rs  reset.rs  trackpad.rs  usage.rs
(+53 files in other folders)
