[package]
name = "bambu-printer-panel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bambu-printer-panel"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_22"] }
gtk4-layer-shell = { version = "0.8.0", features = ["v1_3"] }
libc = "0.2.177"
serde_json = "1.0.145"
